errors.txt
error[E0432]: unresolved imports `ml_kem::DecapsulationKey`, `ml_kem::EncapsulationKey`
 --> src/crypto.rs:6:14
  |
6 | use ml_kem::{DecapsulationKey, EncapsulationKey, KemCore, MlKem1024};
  |              ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^ no `EncapsulationKey` in the root
  |              |
  |              no `DecapsulationKey` in the root
  |
help: a similar name exists in the module
  |
6 - use ml_kem::{DecapsulationKey, EncapsulationKey, KemCore, MlKem1024};
6 + use ml_kem::{Decapsulate, EncapsulationKey, KemCore, MlKem1024};
  |
help: a similar name exists in the module
  |
6 - use ml_kem::{DecapsulationKey, EncapsulationKey, KemCore, MlKem1024};
6 + use ml_kem::{DecapsulationKey, Encapsulate, KemCore, MlKem1024};
  |
error[E0432]: unresolved import `ml_kem::EncapsulationKey`
   --> src/crypto.rs:231:9
    |
231 |     use ml_kem::EncapsulationKey;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^ no `EncapsulationKey` in the root
    |
help: a similar name exists in the module
    |
231 -     use ml_kem::EncapsulationKey;
231 +     use ml_kem::Encapsulate;
    |
error[E0282]: type annotations needed
   --> src/crypto.rs:149:42
    |
149 |     let cipher = Aes256GcmSiv::new(key.0.as_ref().into());
    |                                          ^^^^^^
    |
help: try using a fully qualified path to specify the expected types
    |
149 -     let cipher = Aes256GcmSiv::new(key.0.as_ref().into());
149 +     let cipher = Aes256GcmSiv::new(<[u8; 32] as std::convert::AsRef<T>>::as_ref(&key.0).into());
    |
error[E0282]: type annotations needed
   --> src/crypto.rs:169:42
    |
169 |     let cipher = Aes256GcmSiv::new(key.0.as_ref().into());
    |                                          ^^^^^^
    |
help: try using a fully qualified path to specify the expected types
    |
169 -     let cipher = Aes256GcmSiv::new(key.0.as_ref().into());
169 +     let cipher = Aes256GcmSiv::new(<[u8; 32] as std::convert::AsRef<T>>::as_ref(&key.0).into());
    |
error[E0599]: the method `zeroize` exists for mutable reference `&mut std::collections::HashMap<(crypto::HybridPublicKey, u32), crypto::SecretKeyMaterial>`, but its trait bounds were not satisfied
  --> src/state.rs:20:34
   |
20 | #[derive(Serialize, Deserialize, Zeroize, ZeroizeOnDrop)]
   |                                  ^^^^^^^ method cannot be called due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `std::collections::HashMap<(crypto::HybridPublicKey, u32), crypto::SecretKeyMaterial>: zeroize::DefaultIsZeroes`
           which is required by `std::collections::HashMap<(crypto::HybridPublicKey, u32), crypto::SecretKeyMaterial>: zeroize::Zeroize`
           `&mut std::collections::HashMap<(crypto::HybridPublicKey, u32), crypto::SecretKeyMaterial>: zeroize::DefaultIsZeroes`
           which is required by `&mut std::collections::HashMap<(crypto::HybridPublicKey, u32), crypto::SecretKeyMaterial>: zeroize::Zeroize`
   = note: this error originates in the derive macro `Zeroize` (in Nightly builds, run with -Z macro-backtrace for more info)
error[E0599]: the method `zeroize_or_on_drop` exists for mutable reference `&mut std::collections::HashMap<(crypto::HybridPublicKey, u32), crypto::SecretKeyMaterial>`, but its trait bounds were not satisfied
  --> src/state.rs:20:43
   |
20 | #[derive(Serialize, Deserialize, Zeroize, ZeroizeOnDrop)]
   |                                           ^^^^^^^^^^^^^ method cannot be called due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `std::collections::HashMap<(crypto::HybridPublicKey, u32), crypto::SecretKeyMaterial>: zeroize::Zeroize`
           which is required by `std::collections::HashMap<(crypto::HybridPublicKey, u32), crypto::SecretKeyMaterial>: zeroize::__internal::AssertZeroize`
           `std::collections::HashMap<(crypto::HybridPublicKey, u32), crypto::SecretKeyMaterial>: zeroize::ZeroizeOnDrop`
           which is required by `&&mut std::collections::HashMap<(crypto::HybridPublicKey, u32), crypto::SecretKeyMaterial>: zeroize::__internal::AssertZeroizeOnDrop`
           `&mut std::collections::HashMap<(crypto::HybridPublicKey, u32), crypto::SecretKeyMaterial>: zeroize::Zeroize`
           which is required by `&mut std::collections::HashMap<(crypto::HybridPublicKey, u32), crypto::SecretKeyMaterial>: zeroize::__internal::AssertZeroize`
   = note: this error originates in the derive macro `ZeroizeOnDrop` (in Nightly builds, run with -Z macro-backtrace for more info)
error: unused import: `Hasher`
 --> src/crypto.rs:9:23
  |
9 | use std::hash::{Hash, Hasher as _};
  |                       ^^^^^^
  |
  = note: `-D unused-imports` implied by `-D warnings`
  = help: to override `-D warnings` add `#[allow(unused_imports)]`
Some errors have detailed explanations: E0282, E0432, E0599.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `pq-aura` (lib) due to 7 previous errors
Error: Process completed with exit code 101.